# penguins

./: .copier-answers.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  notebook.ipynb  pyproject.toml
src/penguins/: __init__.py  functions.py
